--- a/index.htm
+++ b/index.htm
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="opis sadržaja stranice" />
-    <meta name="author" content="ime autora stranice" />
-    <title>Meta oznake</title>
+    <meta name="description" content="prvi web" />
+    <meta name="author" content="Marta Tomljanović" />
+    <title>Moj web</title>
   </head>
 
-  <body></body>
+  <body>
+    <h1> Moja prva web stranica </h1>
+  </body>
 </html>
